# PixelSphere

./: README.md  docker-compose.yml
client/: Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: App.js  routes.js
client/src/assets/: global.scss  reset.scss  variables.scss
client/src/components/: DragAndDropFile.jsx
client/src/services/: auth.js  photo.js  user.js
client/src/utils/: axios.js  commentFormat.js  (+1 more)
server/: .env.example  .gitignore  Dockerfile  pyproject.toml
server/src/: app.py
server/src/adapters/api/: settings.py
server/src/adapters/api/auth/: dependencies.py  routes.py  schemas.py
server/src/adapters/api/photo/: dependencies.py  routes.py  schemas.py
server/src/adapters/api/user/: dependencies.py  routes.py  schemas.py
server/src/adapters/database/: alembic.ini  sa_session.py  settings.py
server/src/adapters/database/migrations/: env.py
server/src/adapters/database/migrations/versions/: 092d61ce119c_create_tables.py  1f44ae588d9e_add_tables.py
server/src/adapters/database/models/: __init__.py  comment.py  like.py  photo.py  user.py
server/src/adapters/database/repositories/: base_repository.py  photo_repository.py  user_repository.py
server/src/application/: constants.py  exceptions.py  helpers.py
server/src/application/auth/: entities.py  exceptions.py  heleprs.py  helpers.py  interfaces.py  services.py
server/src/application/photo/: entities.py  exceptions.py  interfaces.py  services.py
server/src/application/user/: exceptions.py  helpers.py  interfaces.py  services.py
(+24 files in other folders)
